--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -41,7 +41,7 @@
       align-items: center;
 
       .number {
-        color: #ff6b00;
+        color: #6600ff;
         margin-right: 2px;
       }
     }
@@ -127,7 +127,7 @@
     }
 
     .sign-in-button {
-      background-color: #ff6b00;
+      background-color: #6600ff;
       color: #ffffff;
       border: none;
       padding: 0.5rem 1rem;
@@ -137,7 +137,7 @@
       transition: background-color 0.2s ease;
 
       &:hover {
-        background-color: #ff8533;
+        background-color: #6600ff;
       }
     }
   }
