--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,5 +180,17 @@
 <app-header></app-header>
 <main>
   <router-outlet></router-outlet>
+  <div class="filter-group">
+    <h3>Price Range</h3>
+    <div class="price-range">
+      <div class="price-values">
+        <span>${{ priceRange[0] }}</span>
+        <span>${{ priceRange[1] }}</span>
+      </div>
+      <mat-slider class="price-slider">
+        <input matSliderStartThumb [(ngModel)]="priceRange[0]">
+        <input matSliderEndThumb [(ngModel)]="priceRange[1]">
+      </mat-slider>
+    </div>
+  </div>
 </main>
-
